[package]
name = "pcapture"
version = "0.2.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Rust Library about Traffic Capture"
homepage = "https://github.com/rikonaka/pcapture-rs"
documentation = "https://docs.rs/pcapture"
repository = "https://github.com/rikonaka/pcapture-rs"
readme = "README.md"
keywords = ["pcap", "pcapng", "network", "traffic", "wireshark"]

[dependencies]
pnet = { version = "^0", features = ["serde"] }
serde = { version = "^1", features = ["derive"]}
bincode = { version = "^2", features = ["serde"] }
thiserror = "^2"
byteorder = "^1"
strum = "^0"
strum_macros = "^0"
subnetwork = "^0"
chrono = "^0"
libc = "^0"
ipnetwork = "0.21.1"

[features]
default = ["pcapng", "pcap", "libpcap"]
pcapng = []
pcap = []
libpnet = []
libpcap = []

[build-dependencies]
bindgen = "0.72.1"
cc = "^1"
