[package]
name = "pcapture"
version = "0.3.19"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Rust Library about Traffic Capture"
homepage = "https://github.com/rikonaka/pcapture-rs"
documentation = "https://docs.rs/pcapture"
repository = "https://github.com/rikonaka/pcapture-rs"
readme = "README.md"
keywords = ["pcap", "pcapng", "network", "capture", "wireshark"]

[dependencies]
libc = "0.2.180"
strum = "0.27.2"
chrono = "0.4.43"
byteorder = "1.5.0"
thiserror = "2.0.18"
subnetwork = "0.6.5"
strum_macros = "0.27.2"
pnet = { version = "0.35.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["serde"] }

[features]
default = []
dev = ["pcapng", "libpcap"]
pcapng = []
pcap = []
libpnet = []
libpcap = []
debug = []

[build-dependencies]
bindgen = "^0"
cc = "^1"

[[example]]
name = "libpnet1"
required-features = ["pcapng", "libpnet"]

[[example]]
name = "libpnet2"
required-features = ["pcap", "libpnet"]

[[example]]
name = "libpnet3"
required-features = ["pcapng", "libpnet"]

[[example]]
name = "libpnet4"
required-features = ["pcapng", "libpnet"]

[[example]]
name = "libpcap1"
required-features = ["pcapng", "libpcap"]

[[example]]
name = "libpcap2"
required-features = ["pcapng", "libpcap"]
